# AO_matrix

./: AO_Etap2.pptx  CMakeLists.txt  README.md
C++_Code/BasicMultiplication/: CMakeLists.txt  multiplication.cpp
C++_Code/CPU_Threading/: BasicThreading.cpp  BasicThreading2.cpp  CMakeLists.txt
C++_Code/CacheAlgorithm/: CMakeLists.txt  code.cpp  code1.cpp  code2.cpp
C++_Code/GPU/: CMakeLists.txt  CUDA_V3_cuBLAS_check.cu  CUDA_Version1.cu  CUDA_Version2.cu  CUDA_Version3.cu
ResultsOfAllKind/: wyniki_wstepne1.txt
